made nav bar stay to stop and side bar stretch full length

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -11,8 +11,9 @@ div.jumbotron {
     padding-bottom: 150px;
 }
 
-.navbar {
+nav.navbar {
   margin-bottom: 0 !important;
+  z-index: 1;
 }
 
 div.jumbotron_text {
